fix(input): solve icon got hidden behind input

--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -167,6 +167,7 @@ $input-counter-padding: 0.25rem 0.5rem !default;
         top: 0;
         height: 100%;
         width: h.useVar("input-height");
+        z-index: 1;
     }
 
     &__icon-right {
